# Cyan

./: .gitignore  Cargo.toml  build.rs  cyan.rc  tray-example.rc
migrations/: 20250723204501_initial.sql
src/: arguments.rs  configs.rs  database.rs  main.rs
src/commands/: add.rs  mod.rs  print.rs  sync.rs
src/commands/print/: copy.rs  list.rs  mod.rs  new.rs  save.rs
src/database/: mod.rs  screenshot.rs  screenshots.rs
src/windows/: mod.rs  screenshots.rs
