[package]
name = "cyan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync"
] }
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
nestify = "0.3.3"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.203", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
glob = "0.3.1"
gxhash = { version = "3.4.1", features = ["hybrid"] }
filetime = "0.2.23"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
ashpd = { version = "0.8.1", features = [
    "tokio",
    "wayland",
], default-features = false }
