[package]
name = "cyan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
clap = { version = "4.5.41", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
lina-rs = { git = "https://github.com/Takasaki-Studio/lina-rs", features = [
    "sqlx",
], branch = "main" }
chrono = "0.4.41"
dirs = "6.0.0"
tabled = "0.20.0"
